--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,7 @@
 body {
     background-color: var(--lightgrey);
     width: 100vw;
+    font-family: Arial, Helvetica, sans-serif;
 }
 /* Header */
 header {
@@ -60,12 +61,17 @@ nav ul {
     padding: 0px 20px;
 }
 
-nav ul li, a{
+nav a{
     color: white;
     text-decoration: none;
     line-height: 2;
     padding: 0px 20px;
 }
+
+nav a:hover {
+    color: var(--lightgrey);
+}
+
 /* Main box with content and sidebar */
 main {
     background-color: var(--lightgrey);
@@ -88,6 +94,7 @@ main {
 #contact h2 {
     flex: 20%;
     font-size: 200%;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     border-right: 5px solid var(--porcini);
     margin-left: 30px;
 }
@@ -105,7 +112,7 @@ main {
 #about p {
     flex: 65%;
     margin: 0px 30px;
-    line-height: 1.5;
+    line-height: 1.3;
 }
 
 #work-images {
@@ -115,6 +122,10 @@ main {
 
 #marketing {
     position: relative;
+}
+
+#marketing:hover {
+    box-shadow: 5px 5px 5px 5px var(--darktext);
 }
 
 #placeholders {
