fixed project label

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -181,7 +181,7 @@ main {
     content: "Challenge 6: Weather Dashboard"
 }
 
-#refactor::after {
+#quiz::after {
     content: "Challenge 4: JavaScript Quiz"
 }
 
